<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="trafficViewModel" type="be.ugent.oomt.trafficfeed.view.ui.TrafficViewModel" />

    </data>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.ui.MainActivity" android:orientation="vertical">
        <TextView
                android:text="Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/lblTitle" android:textStyle="bold"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textAlignment="center"/>
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
            <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:padding="15dp">
                <TextView
                        android:text="@string/lblIdText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:textAlignment="textEnd" android:textStyle="bold"
                        android:layout_margin="@dimen/valuePadding"/>
                <TextView
                        android:text="@{trafficViewModel.currentNotification.id}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/id"
                        android:layout_margin="@dimen/valuePadding"/>
                <TextView
                        android:text="@string/lblSourceText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:textAlignment="textEnd" android:textStyle="bold"
                        android:layout_margin="@dimen/valuePadding"/>
                <TextView
                        android:text="@{trafficViewModel.currentNotification.source}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/source"
                        android:layout_margin="@dimen/valuePadding"/>
                <TextView
                        android:text="@string/lblTypeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:textAlignment="textEnd" android:textStyle="bold"
                        android:layout_margin="@dimen/valuePadding"/>
                <TextView
                        android:text="@{trafficViewModel.currentNotification.type}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/type"
                        android:layout_margin="@dimen/valuePadding"/>
                <TextView
                        android:text="@string/lblTransportText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:textAlignment="textEnd" android:textStyle="bold"
                        android:layout_margin="@dimen/valuePadding"/>
                <TextView
                        android:text="@{trafficViewModel.currentNotification.transport}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/transport"
                        android:layout_margin="@dimen/valuePadding"/>
                <TextView
                        android:text="@string/lblAlarmNameText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:textAlignment="textEnd" android:textStyle="bold"
                        android:layout_margin="@dimen/valuePadding"/>
                <TextView
                        android:text="@{trafficViewModel.currentNotification.name}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/alarmName"
                        android:layout_margin="@dimen/valuePadding"/>
                <TextView
                        android:text="@string/lblMessageText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:textAlignment="textEnd" android:textStyle="bold"
                        android:layout_margin="@dimen/valuePadding"/>
                <TextView
                        android:text="@{trafficViewModel.currentNotification.message}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/message"
                        android:layout_margin="@dimen/valuePadding"/>
                <TextView
                        android:text="@string/lblLongitudeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:textAlignment="textEnd" android:textStyle="bold"
                        android:layout_margin="@dimen/valuePadding"/>
                <TextView
                        android:text="@{trafficViewModel.currentNotification.longitude.toString()}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/longitude"
                        android:layout_margin="@dimen/valuePadding"/>
                <TextView
                        android:text="@string/lblLatitudeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:textAlignment="textEnd" android:textStyle="bold"
                        android:layout_margin="@dimen/valuePadding"/>
                <TextView
                        android:text="@{trafficViewModel.currentNotification.latitude.toString()}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/latitude"
                        android:layout_margin="@dimen/valuePadding"/>
                <TextView
                        android:text="@string/lblTimestampText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:textAlignment="textEnd" android:textStyle="bold"
                        android:layout_margin="@dimen/valuePadding"/>
                <TextView
                        android:text="@{trafficViewModel.currentNotification.date}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/timestamp"
                        android:layout_margin="@dimen/valuePadding"/>
            </GridLayout>
        </ScrollView>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                    android:text="@string/btnPreviousText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/btnPrevious" android:layout_weight="1"
                    android:onClick="@{() -> trafficViewModel.previousNotification()}"/>
            <Button
                    android:text="@string/btnNextText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/btnNext" android:layout_weight="1"
                    android:onClick="@{() -> trafficViewModel.nextNotification()}"/>
        </LinearLayout>
    </LinearLayout>
</layout>
